--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -449,24 +449,20 @@
 
 }
 
-
 #menu-backdrop {
     display: none;
     position: fixed;
-    top: 135px;
-    left: 0;
+    top: 0;
     right: 0;
     bottom: 0;
-
+    left: 0;
     background-color: rgba(0, 51, 102, .7);
-    z-index: 1;
+    z-index: 100;
+}
+.meta-links-toggled,
+.nav-toggled {
 
-
-    .admin-bar & {
-        top: 135 + $wordpress-adminbar-bigheight;
-        @media (min-width: $screen-sm) and (min-width: $wordpress-adminbar-break) {
-            top: 135 + $wordpress-adminbar-smallheight;
-        }
+    #menu-backdrop {
+        display: block;
     }
-
 }
