Baue Desktop-Ansicht von neuer Navigation ein

--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -147,7 +147,7 @@
 	}
 
 	@media (min-width: $screen-md) {
-		margin: -20px auto;
+		margin: 0 auto -20px;
 	}
 
 	@media (min-width: $slider-maxwidth + 20) {
