--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -464,5 +464,9 @@
 
     #menu-backdrop {
         display: block;
+
+        @media (min-width: $screen-sm) {
+            display: none;
+        }
     }
 }
