--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -3,20 +3,34 @@
 /*-----------------------------------------------------------------------------------*/
 .meta-links-container {
     flex-shrink: 0;
+
+    @media (min-width: $screen-sm) {
+        display: none;
+    }
 }
 
-#meta-menu:target {
+#meta-menu {
 
-    .meta-links-trigger-open {
+    @media (min-width: $screen-sm) {
         display: none;
     }
 
-    .meta-links-trigger-close {
-        display: block;
-    }
+    &:target {
+        .meta-links-trigger-open {
+            display: none;
+        }
 
-    & + .meta-links {
-        display: block;
+        .meta-links-trigger-close {
+            display: block;
+        }
+
+        & + .meta-links {
+            display: block;
+
+            @media (min-width: $screen-sm) {
+                display: flex;
+            }
+        }
     }
 }
 
@@ -24,6 +38,10 @@
 
     .meta-links {
         display: block;
+
+        @media (min-width: $screen-sm) {
+            display: flex;
+        }
     }
 
     .meta-links-trigger {
@@ -49,6 +67,7 @@
 
     .meta-links-trigger-icon {
         display: flex;
+        color: var(--color-FAU);
 
         svg {
             width: 24px;
@@ -64,7 +83,8 @@
         }
     }
 
-    &.meta-links-trigger-close .meta-links-trigger-icon svg {
+    &.meta-links-trigger-close .meta-links-trigger-icon svg,
+    &[aria-expanded="true"] svg {
         transform: scale(0.7);
     }
 
@@ -92,6 +112,32 @@
     z-index: 100;
     padding: 15px;
 
+    @media (min-width: $screen-sm) {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        column-gap: 1rem;
+        padding-right: 0;
+        padding-left: 0;
+        background-color: transparent;
+
+        .orgalist {
+            order: 1;
+        }
+        .breadcrumblist {
+            display: none;
+        }
+        .meta-search {
+            order: 3;
+        }
+        .meta-widget {
+            order: 4;
+        }
+        .meta-nav.menu {
+            order: 2;
+        }
+    }
+
     ul li,
     ol li {
         list-style-type: none;
@@ -100,9 +146,10 @@
         a {
             display: inline-block;
             padding: 0.15rem 0;
+            text-decoration: none;
 
             &:hover {
-                text-decoration: none;
+                text-decoration: underline;
             }
         }
     }
@@ -120,11 +167,16 @@
         position: relative;
         margin: 1rem 0 0;
 
+        @media (min-width: $screen-sm) {
+            margin-top: 0;
+            max-width: 300px;
+            margin-left: auto;
+        }
+
         .searchform {
             display: flex;
             width: 100%;
             padding: 0;
-            margin: 0.5rem 0;
             justify-items: center;
         }
 
@@ -143,7 +195,11 @@
     }
 
     .cms-workflow-widget {
-        margin: 0;
+        margin: 1rem 0 0;
+
+        @media (min-width: $screen-sm) {
+            margin-top: 0;
+        }
 
         .mlp_language_box {
             background-color: transparent;
@@ -151,13 +207,24 @@
     }
 
     .meta-nav.menu {
-        margin: 1rem 0 0;
+        margin: 0.5rem 0 0;
+
+        @media (min-width: $screen-sm) {
+            display: flex;
+            flex-wrap: wrap;
+            column-gap: 1rem;
+            margin-top: 0;
+        }
     }
 }
 
 .meta-logo {
     display: flex;
     max-height: 100%;
+
+    @media (min-width: $screen-sm) {
+        display: none;
+    }
 
     .branding {
         display: flex;
@@ -193,9 +260,5 @@
                 display: none;
             }
         }
-    }
-
-    @media (min-width: $screen-md) {
-        display: none;
     }
 }
