--- a/src/sass/structure/header/_orga-breadcrumb.scss
+++ b/src/sass/structure/header/_orga-breadcrumb.scss
@@ -3,27 +3,45 @@
 /*-----------------------------------------------------------------------------------*/
 @use "sass:math";
 
-#headerwrap {
+.orga-breadcrumb {
+    display: none;
+    margin-top: 0.5rem;
 
-    .orga-breadcrumb {
-        display: none;
+    @media (min-width: $screen-sm) {
+        display: block;
+        width: 750px;
+        padding: 0 15px;
+        margin: 0.5rem auto 0;
 
-        @media (min-width: $screen-md) {
-            display: block;
-            margin-bottom: floor(math.div($grid-gutter-width, 2));
+        li {
+            color: var(--color-MetaTextDefault);
 
-            li {
+            a {
                 color: var(--color-MetaTextDefault);
+                text-decoration: none;
+            }
 
-                a {
-                    color: var(--color-MetaTextDefault);
-                    text-decoration: none;
-                }
-
-                a:hover, a:focus {
-                    text-decoration: underline;
-                }
+            a:hover, a:focus {
+                text-decoration: underline;
             }
         }
     }
+
+    @media (min-width: $screen-md) {
+        width: 970px;
+    }
+    @media (min-width: $screen-lg) {
+        width: 1024px;
+    }
+    @media (min-width: $screen-xl + 20) {
+        width: 1400px;
+    }
 }
+#meta .orga-breadcrumb {
+    display: block;
+
+    @media (min-width: $screen-sm) {
+        display: none;
+    }
+}
+
