--- a/src/sass/structure/header/_orga-breadcrumb.scss
+++ b/src/sass/structure/header/_orga-breadcrumb.scss
@@ -7,6 +7,10 @@
     display: none;
     margin-top: 0.5rem;
 
+    &:first-child {
+        margin-top: 0;
+    }
+
     @media (min-width: $screen-sm) {
         display: block;
         width: 750px;
