Korrigiere Ausrichtung rechts von Hauptmenü

--- a/src/sass/structure/header/_header.scss
+++ b/src/sass/structure/header/_header.scss
@@ -21,5 +21,8 @@
 @import "orga-breadcrumb";
 
 .header-menu {
-    width: 100%;
+
+    @media (max-width: $screen-sm) {
+        width: 100%;
+    }
 }
