--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -120,7 +120,7 @@
 
     @media (min-width: $screen-sm) {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         justify-content: space-between;
         column-gap: 1rem;
         padding-right: 0;
@@ -275,6 +275,7 @@
     }
 
     .custom-logo-link {
+        text-align: center;
 
         img,
         svg {
