--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -298,6 +298,11 @@
 	}
 }
 
+#hero-slides {
+    @media (min-width: $screen-md) {
+        top: -20px;
+    }
+}
 
 .hero-slides-op-0 #hero-slides .item {
 	header, p {
