--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -49,7 +49,7 @@
         top: $wordpress-adminbar-bigheight;
     }
 
-    body:not([data-scroll='0']) {
+    body:not([data-scroll='0']) & {
         @include box-shadow(0 1px 3px rgba(0, 0, 0, 0.3));
     }
 
