--- a/src/sass/structure/header/_metasearch.scss
+++ b/src/sass/structure/header/_metasearch.scss
@@ -125,7 +125,7 @@
 
 
 /* New Toogle Button */
-#headerwrap #search-toggle {
+#headerwrapper #search-toggle {
     background: transparent;
     border: none;
     display: none;
