--- a/src/sass/structure/header/_branding.scss
+++ b/src/sass/structure/header/_branding.scss
@@ -3,7 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 
 
-#headerwrap header {
+#headerwrapper header {
     .branding {
         max-width: 100%;
         display: none;
