--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -123,8 +123,8 @@
         align-items: center;
         justify-content: space-between;
         column-gap: 1rem;
-        padding-right: 0;
-        padding-left: 0;
+	padding: 5px 0;
+
         background-color: transparent;
 
         .orgalist {
@@ -263,7 +263,8 @@
 .meta-logo {
     display: flex;
     max-height: 100%;
-
+    text-align: center;
+    
     @media (min-width: $screen-sm) {
         display: none;
     }
