--- a/src/sass/structure/header/_orga-breadcrumb.scss
+++ b/src/sass/structure/header/_orga-breadcrumb.scss
@@ -15,7 +15,7 @@
         display: block;
         width: 750px;
         padding: 0 15px;
-        margin: 0.5rem auto 0;
+        margin: 0 auto;
 
         li {
             color: var(--color-MetaTextDefault);
