--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -122,6 +122,11 @@ Mixins File for Wordpress Theme FAU
 html {
   font-size: 100%;
 }
+@media (min-width: 1400px) {
+  html {
+    font-size: 18px;
+  }
+}
 
 /*
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
