--- a/src/sass/fonts/_fontbase.scss
+++ b/src/sass/fonts/_fontbase.scss
@@ -5,4 +5,8 @@
 
 html {
     font-size: $font-size-rembase;
+    
+    @media (min-width: $screen-xl) {
+	font-size: $font-size-rembase-screen-xl;
+    }
 } 
