--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -321,6 +321,25 @@
 }
 
 /*-----------------------------------------------------------------------------------*/
+/* Template: Errorpages
+/*-----------------------------------------------------------------------------------*/
+
+
+.errorpage-content {
+    padding: 0 15px;
+    flex: 1 1 $screen-xs;
+
+    main {
+	padding-top: ceil(math.div($grid-gutter-width, 2));
+    }
+
+    @media (min-width: $screen-sm) {
+	padding-right: ceil(math.div($grid-gutter-width, 2));
+    }
+}
+
+
+/*-----------------------------------------------------------------------------------*/
 /* Template: Template Startseiten
 /*-----------------------------------------------------------------------------------*/
 
