div farben "korrigiert" wg. wletberühmten designermurks

--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -4849,7 +4849,7 @@ h4 {
   font-size: 1.312rem;
   line-height: 1.969rem;
 }
-.person h4, .span3 h4, .span4 h4 {
+.person h4, .span3 h4 {
   font-size: 1.187rem;
   line-height: 1.782rem;
 }
