--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,7 @@
 //-----------------------------------------------------------------------------------*/
 @use "sass:math";
 
-$farbfamilie: 'zuv';
+$farbfamilie: 'phil';
 // med, phil, nat, rw, tf, zuv
 
 
