colors in slider imageslider galery

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,7 @@
 //-----------------------------------------------------------------------------------*/
 @use "sass:math";
 
-$farbfamilie: 'phil';
+$farbfamilie: 'zuv';
 // med, phil, nat, rw, tf, zuv
 
 
@@ -306,7 +306,7 @@ $slick-opacity-default: 0.75 !default;
 $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
 
-$slick-opacity-text-background: 0.7;
+$slick-opacity-text-background: 0.8;
 $slick-opacity-text-shadow: 0px 0px 4px #000;
 // Define breakpoints
 
