--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -35,16 +35,12 @@
 				margin-bottom: 5px;
 			}
 			header {
-				color: #fff;
-				text-shadow: $slick-opacity-text-shadow;
 				display: inline;
 				padding: 3px;
 				margin: 25px 30px;
 				@include px2rem($font-size-hero-slider-title);
 
 				box-decoration-break: clone;
-				background: rgba($colorPrimary, $slick-opacity-text-background);
-
 				@media (min-width: $screen-sm) {
 					margin: 10px 0 15px 0;
 
@@ -60,16 +56,13 @@
 			@media (min-width: $screen-sm) {
 				display: inline-block;
 			}
-
+			
 
 			p {
 				@include px2rem($font-size-hero-slider-text, $font-size-gridbase, $font-size-hero-slider-text * 1.7);
-				color: #fff;
-				text-shadow: $slick-opacity-text-shadow;
 				padding: 5px 4px 4px 4px;
 				margin: 0;
 				box-decoration-break: clone;
-				background: rgba($colorPrimary, $slick-opacity-text-background);
 
 				@media (min-width: $screen-sm) {
 					display: inline;
@@ -78,6 +71,18 @@
 
 			}
 		}
+		
+		.slider-titel, 
+		.slider-text {
+		    max-width: 55rem;
+		    
+		    header, p {
+			background-color: var(--color-primary-ci-hell);
+			color: var(--color-primary-ci-hell-kontrast);
+			opacity: $slick-opacity-text-background;
+		    }	    
+		}
+		
 		p.credits {
 			background: $colorCopyrightBackground;
 			color: $colorCopyright;
@@ -185,26 +190,20 @@
 		&:focus {
 			outline: none;
 			background: transparent;
-			color: $slick-arrow-color;
+			color: var(--color-button-bg);
 
 			&:before {
-				opacity: $slick-opacity-on-hover;
+				 color: var(--color-button-hover-bg);
 			}
 		}
 
-		&.slick-disabled:before {
-			opacity: $slick-opacity-not-active;
-		}
-
+		
 		&:before {
 			font-size: 40px;
 			line-height: 1;
-			color: $slick-arrow-color;
-			opacity: $slick-opacity-default;
-			text-shadow: $slick-opacity-text-shadow;
-			@media (min-width: $break-1360) {
-				text-shadow: none;
-			}
+			color: var(--color-button-bg);
+			text-shadow: 0 0 1px var(--color-button-text);
+
 		}
 
 	}
@@ -303,25 +302,3 @@
         top: -20px;
     }
 }
-
-.hero-slides-op-0 #hero-slides .item {
-	header, p {
-		@media (min-width: $screen-sm) {
-			background: rgba($colorPrimary, 0);
-		}
-	}
-}
-
-$oc-list: 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1;
-@each $current-oc in $oc-list {
-	$i: index($oc-list, $current-oc);
-	.hero-slides-op-#{$i} #hero-slides .item {
-		header, p {
-			@media (min-width: $screen-sm) {
-				background: rgba($colorPrimary, $current-oc);
-			}
-		}
-	}
-}
-
-
