dickere unterstreichung bei links

--- a/src/sass/elements/_links.scss
+++ b/src/sass/elements/_links.scss
@@ -105,8 +105,12 @@ a {
 .portalpage-content,
 .content-inline {
     p {
-	a {
+	a{
 	    @include styledcontentlink();
+	    
+	    img {
+		@include defaultlinkstyle();
+	    }
 	}
 
     }
@@ -126,7 +130,7 @@ a {
     a.media-img:focus {
 	    img {
 		
-		transform: scale(1.2);
+		transform: scale(1.1);
 	    }
 	}
 	
