--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -179,8 +179,8 @@ $font-path-roboto: './fonts/roboto/';
 $font-path-fau-chimera: './fonts/fau-chimera/';
 
 // Font sizes
-$font-size-rembase: 16px; 
-$font-size-rembase-screen-xl: 17px;
+$font-size-rembase: 100%; 
+$font-size-rembase-screen-xl: 110%;
 
 $font-size-gridbase: 16;
 $font-size-base: 16;
