--- a/src/sass/structure/content/_gallery.scss
+++ b/src/sass/structure/content/_gallery.scss
@@ -336,7 +336,7 @@
 		display: inline-block;
 		width: 1.5rem;
 		height: 1.5rem;
-		margin: 0 0.5rem;
+		margin: 0.2rem 0.5rem;
 		padding: 0;
 		cursor: pointer;
 		
