--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -223,7 +223,7 @@ $font-size-nav-blockquote: ($font-size-base + 1);
 $font-size-nav-blockquote-cite: ($font-size-base - 1);
 $font-size-nav-introtext: $font-size-base;
 $font-size-nav-flyout-items: $font-size-base;
-$font-size-nav-mainlinks: ($font-size-base + 2);
+$font-size-nav-mainlinks: $font-size-base;
 
 $font-size-subnav-firstlevel: ($font-size-base - 1);
 $font-size-subnav-sublevel: ($font-size-base - 2);
