--- a/src/sass/structure/header/_branding.scss
+++ b/src/sass/structure/header/_branding.scss
@@ -125,12 +125,22 @@
         a {
             text-decoration: none;
             transition: opacity 1s ease 0s;
+            padding: 15px;
+            margin: -15px;
+            display: inline-block;
         }
 
         a.generated:focus,
         a.generated:hover {
-            filter: grayscale(80%);
-            text-decoration: underline;
+            //filter: grayscale(80%);
+            //text-decoration: underline;
+            display: inline-block;
+            transition: border-left 0.25s ease-out;
+            /*border-left: 10px solid #c50f3c;*/
+            border-left: 8px solid var(--color-primary-ci-hell);
+            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.22);
+            position: relative;
+            margin-right: -23px;
         }
     }
 
