--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------------------*/
-/* Meta region in top
+/* Meta region in top   fauorg-home
 /*-----------------------------------------------------------------------------------*/
 
 #meta {
@@ -24,7 +24,10 @@
         justify-content: space-between;
         align-items: center;
         height: 50px;
-        padding: 5px 0;
+        padding: 4px 0;
+        @media (min-width: $screen-sm) {
+            padding: 5px 0;
+        }
 
         &:after {
             content: '';
