--- a/src/sass/structure/header/_metanav.scss
+++ b/src/sass/structure/header/_metanav.scss
@@ -77,7 +77,7 @@
     }
 
     .meta-links-trigger-icon-fau {
-        margin-right: -16px;
+       //margin-right: -16px;
 
         svg {
             width: 40px;
