--- a/src/sass/plugins/_rrze-glossary.scss
+++ b/src/sass/plugins/_rrze-glossary.scss
@@ -9,22 +9,21 @@
 	text-align: center;
 
 	li {
-	    border: 1px solid var(--color-StandardHellgrau);
+	   
 	    color: var(--color-TextLight);
-
+	    @include px2rem($font-size-textbuttons);
 	    width: 2rem;
 	    height: 1.875rem;
 	    margin: 0.2rem;
 	    padding: 0.2rem;
 	    text-align: center;
 	    vertical-align: middle;
+	     border: 1px solid var(--color-StandardHellgrau);
 	    @include border-radius(4px);
 
+	   
 
 	    &.filled {
-		border-color: var(--color-primary-basis);
-		background: var(--color-ContentBorders);
-		color: var(--color-primary-basis);
 		font-weight: bold;
 		padding: 0;
 
@@ -32,15 +31,13 @@
 		     padding: 0.2rem;
 		     text-decoration: none;
 		     width: 100%;
+		     @include buttoncolor();
+		     @include border-radius(4px);
 		}
 
 		a:hover,
 		a:focus {
 		    text-decoration: underline;
-		    background-color: darken($PalettonHellste, 3%);
-		    border-color: var(--color-primary-basis);
-		    background: var(--color-primary-basis);
-		    color: $colorMainBackground;
 		}
 	    }
 
