--- a/src/sass/structure/widgets/_sidebar.scss
+++ b/src/sass/structure/widgets/_sidebar.scss
@@ -45,7 +45,7 @@
 
 
     @media (min-width: $screen-md) {
-        border-left: 2px solid var(--color-primary-hellste);
+        border-left: 2px solid var(--color-primary-ci-hell2);
         border-top: none;
         padding-left: ceil(math.div($fau-gutter-width, 2));
         margin-top: 0;
