--- a/src/sass/elements/_forms.scss
+++ b/src/sass/elements/_forms.scss
@@ -62,7 +62,7 @@ form {
 	    max-width: 98%;
 	    padding: 0;
 	    @media (min-width: $screen-sm) {
-		border: 1px solid var(--color-primary-hellste);
+		border: 1px solid var(--color-primary-ci-hell);
 		padding: 20px;
 	    }
 	}
