--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -125,7 +125,7 @@ Mixins File for Wordpress Theme FAU
 
     a:hover, a:focus {
         text-decoration: none;
-        background-color: var(--color-primary-hellste);
+        background-color: var(--color-primary-ci-hell2);
     }
 }
 
