--- a/src/sass/structure/content/_search.scss
+++ b/src/sass/structure/content/_search.scss
@@ -122,14 +122,14 @@
 	    }
 	    input[type="text"] {
 		@include px2rem($font-size-herosearch);
-		border: 1px solid  var(--color-primary-dunkler);
+		border: 1px solid  var(--color-primary-ci-hell);
 		width: 80%;
 		padding: 5px 10px 5px 30px;
 		height: inherit;
 		margin: 0;
 
-		background: var(--color-primary-basis);
-		color: var(--color-primary-basis-kontrast);
+		background: var(--color-primary-ci-hell2);
+		color: var(--color-primary-ci-hell2-kontrast);
 
 		&:focus, &:hover {
 			background-color: var(--color-primary-dunkler);
@@ -139,23 +139,19 @@
 
 	    input[type="submit"] {
 		@include px2rem($font-size-herosearch);
-		    border: 1px solid var(--color-primary-hellste);
-		    background: var(--color-primary-basis-kontrast);
-		    color: var(--color-primary-basis);
+		    border: 1px solid var(--color-primary-ci-hell);
+		    @include buttoncolor();
 		    padding: 5px 10px;
 		    height: inherit;
 		    margin-left: -30px;
-		    
-		    &:focus, &:hover {
-			    background-color: var(--color-primary-hellste);
-		    }
+
 	    }
 	    .searchicon {
 		@extend .fa;
 		@extend .fa-search;
 		position: relative;
 		margin-right: -30px;
-		color: var(--color-primary-basis-kontrast);
+		@include buttoncolor();
 	    }
 	}
 
