update farben und style Bugfix Portalpage Settings im Backend

--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -22,30 +22,72 @@
   --color-primary-basis-kontrast: #fff;
   --color-primary-ci-hell: #04316A;
   --color-primary-ci-hell-kontrast: #fff;
+  --color-primary-ci-hell: #CED9E7;
+  --color-primary-ci-hell-kontrast: #000;
+  --color-primary-ci-hell: #004A9F;
+  --color-primary-ci-hell-kontrast: #fff;
+  --color-primary-ci-hell: #041E42;
+  --color-primary-ci-hell-kontrast: #fff;
   --color-zentral-basis: #04316A;
   --color-zentral-basis-kontrast: #fff;
   --color-zentral-ci-hell: #04316A;
+  --color-zentral-ci-hell-kontrast: #fff;
+  --color-zentral-ci-hell: #CED9E7;
+  --color-zentral-ci-hell-kontrast: #000;
+  --color-zentral-ci-hell: #004A9F;
+  --color-zentral-ci-hell-kontrast: #fff;
+  --color-zentral-ci-hell: #041E42;
   --color-zentral-ci-hell-kontrast: #fff;
   --color-phil-basis: #963B2F;
   --color-phil-basis-kontrast: #fff;
   --color-phil-ci-hell: #FDB735;
   --color-phil-ci-hell-kontrast: #000;
+  --color-phil-ci-hell: #F4E8CB;
+  --color-phil-ci-hell-kontrast: #000;
+  --color-phil-ci-hell: #E46D41;
+  --color-phil-ci-hell-kontrast: #000;
+  --color-phil-ci-hell: #963B2F;
+  --color-phil-ci-hell-kontrast: #fff;
   --color-med-basis: #005287;
   --color-med-basis-kontrast: #fff;
   --color-med-ci-hell: #18B4F1;
   --color-med-ci-hell-kontrast: #000;
+  --color-med-ci-hell: #B9D9EC;
+  --color-med-ci-hell-kontrast: #000;
+  --color-med-ci-hell: #005287;
+  --color-med-ci-hell-kontrast: #fff;
+  --color-med-ci-hell: #003E61;
+  --color-med-ci-hell-kontrast: #fff;
   --color-nat-basis: #266141;
   --color-nat-basis-kontrast: #fff;
   --color-nat-ci-hell: #7BB725;
   --color-nat-ci-hell-kontrast: #000;
+  --color-nat-ci-hell: #CFE0D8;
+  --color-nat-ci-hell-kontrast: #000;
+  --color-nat-ci-hell: #266141;
+  --color-nat-ci-hell-kontrast: #fff;
+  --color-nat-ci-hell: #14462D;
+  --color-nat-ci-hell-kontrast: #fff;
   --color-rw-basis: #971B2F;
   --color-rw-basis-kontrast: #fff;
   --color-rw-ci-hell: #C50F3C;
+  --color-rw-ci-hell-kontrast: #fff;
+  --color-rw-ci-hell: #F2DED1;
+  --color-rw-ci-hell-kontrast: #000;
+  --color-rw-ci-hell: #971B2F;
+  --color-rw-ci-hell-kontrast: #fff;
+  --color-rw-ci-hell: #662938;
   --color-rw-ci-hell-kontrast: #fff;
   --color-tf-basis: #2F586E;
   --color-tf-basis-kontrast: #fff;
   --color-tf-ci-hell: #8C9FB1;
   --color-tf-ci-hell-kontrast: #000;
+  --color-tf-ci-hell: #D3DDE6;
+  --color-tf-ci-hell-kontrast: #000;
+  --color-tf-ci-hell: #2F586E;
+  --color-tf-ci-hell-kontrast: #fff;
+  --color-tf-ci-hell: #204251;
+  --color-tf-ci-hell-kontrast: #fff;
   --color-Text: #444;
   --color-TextLight: #797676;
   --color-MetaTextDefault: #444;
@@ -5595,7 +5637,7 @@ main form {
 }
 @media (min-width: 768px) {
   main form {
-    border: 1px solid var(--color-primary-hellste);
+    border: 1px solid var(--color-primary-ci-hell);
     padding: 20px;
   }
 }
