--- a/src/sass/structure/header/_grid.scss
+++ b/src/sass/structure/header/_grid.scss
@@ -39,7 +39,7 @@
         @media (min-width: $screen-sm) {
             align-items: center;
             justify-content: space-between;
-            padding: 20px 0 10px;
+            padding: 1.2rem 0 1rem;
 
             .branding {
                 min-width: 240px;
